--- a/pages/auth/signin.html
+++ b/pages/auth/signin.html
@@ -14,7 +14,7 @@
           <input type="password" class="form-control" id="PasswordInput" name="Password">
         </div>
         <div class="text-center">
-            <button type="submit" class="btn btn-primary">Connexion</button>
+            <button type="button" class="btn btn-primary" id="btnSignin">Connexion</button>
         </div>
     </form>
     <div class="text-center pt-3">
