--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -13,7 +13,7 @@
                 <div class="image-card text-white">
                     <img src="../images/gal4.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
-                    <div class="action-image-buttons">
+                    <div class="action-image-buttons" data-show="admin">
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal"><i class="bi bi-pencil-square"></i></button>
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#DeletePhotoModal"><i class="bi bi-trash"></i></button>
                     </div>
@@ -23,7 +23,7 @@
                 <div class="image-card text-white">
                     <img src="../images/gal6.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
-                    <div class="action-image-buttons">
+                    <div class="action-image-buttons" data-show="admin">
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal"><i class="bi bi-pencil-square"></i></button>
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#DeletePhotoModal"><i class="bi bi-trash"></i></button>
                     </div>
@@ -33,7 +33,7 @@
                 <div class="image-card text-white">
                     <img src="../images/im3.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
-                    <div class="action-image-buttons">
+                    <div class="action-image-buttons" data-show="admin"> 
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal"><i class="bi bi-pencil-square"></i></button>
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#DeletePhotoModal"><i class="bi bi-trash"></i></button>
                     </div>
@@ -43,7 +43,7 @@
                 <div class="image-card text-white">
                     <img src="../images/im2.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
-                    <div class="action-image-buttons">
+                    <div class="action-image-buttons" data-show="admin">
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal"><i class="bi bi-pencil-square"></i></button>
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#DeletePhotoModal"><i class="bi bi-trash"></i></button>
                     </div>
@@ -53,7 +53,7 @@
                 <div class="image-card text-white">
                     <img src="../images/im1.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
-                    <div class="action-image-buttons">
+                    <div class="action-image-buttons" data-show="admin">
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal"><i class="bi bi-pencil-square"></i></button>
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#DeletePhotoModal"><i class="bi bi-trash"></i></button>
                     </div>
@@ -63,7 +63,7 @@
                 <div class="image-card text-white">
                     <img src="../images/gal5.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
-                    <div class="action-image-buttons">
+                    <div class="action-image-buttons" data-show="admin">
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal"><i class="bi bi-pencil-square"></i></button>
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#DeletePhotoModal"><i class="bi bi-trash"></i></button>
                     </div>
