Ajout loader + validation form reserver

--- a/pages/reservations/reserver.html
+++ b/pages/reservations/reserver.html
@@ -2,6 +2,7 @@
     <div class="hero-scene-content">
         <h1>Ma réservation</h1>
     </div>
+<script src="../../js/reservations/reserver.js"></script>
 </div>
 
 <div class="container">
