--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
+  <!-- Loader -->
+  <div id="loader" style="position:fixed;top:0;left:0;width:100vw;height:100vh;background:rgba(255,255,255,0.8);z-index:9999;display:flex;align-items:center;justify-content:center;">
+    <div class="spinner-border text-primary" role="status" style="width:4rem;height:4rem;">
+      <span class="visually-hidden">Chargement...</span>
+    </div>
+  </div>
+  <header>
         <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
             <div class="container-fluid">
               <a class="navbar-brand" href="/">Quai Antique</a>
